Baseline files for Milestone 3